[package]
name = "lookas"
version = "1.0.0"
edition = "2021"
description = "A terminal-based audio spectrum visualizer written in Rust"
license = "MIT"
repository = "https://github.com/rccyx/lookas"
readme = "README.md"
keywords = ["audio", "visualization", "terminal", "spectrum", "fft"]
categories = ["multimedia", "visualization", "command-line-utilities"]

[dependencies]
anyhow = "1.0"
cpal = "0.15"
crossterm = "0.27"
libc = "0.2.176"
rustfft = "6"

