[package]
name = "lookas"
version = "1.0.1"
edition = "2021"
description = "A terminal-based audio spectrum visualizer written in Rust"
license = "MIT"
repository = "https://github.com/rccyx/lookas"
readme = "README.md"
keywords = ["audio", "visualization", "terminal", "spectrum", "fft"]
categories = ["multimedia", "visualization", "command-line-utilities"]

[dependencies]
anyhow = "1.0"
cpal = "0.15"
crossterm = "0.27"
rustfft = "6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

